Version 1.3     NOT RELEASED
-------------------------------
 - only display link to list categories in ./admin/cat.php if categories exist (zyspec)
 - only display link to list subscribers in ./admin/cat.php if subscribers exist (zyspec)
 - changed: remove pass-by-reference for non-vars (zyspec)
 - changed: dirname(__FILE__) to __DIR__ (zyspec)
 - changed: licence.txt to license.txt (US english spelling) to match documentation (zyspec)
 - changed: xnewsletterBreadcrumb to XnewsletterBreadcrumb for naming consistency (zyspec)
 - removed XnewsletterRequest and XnewsletterFilterInput classes and replaced with XoopsRequest class (zyspec)
 - standardize code (mamba,luciorota, zyspec)
 - import procedure: check if limit options are compatible with php.ini 'max_input_vars' setting (luciorota)
 - templatize user side (luciorota)
 - standardize code (luciorota)
 - added: additional salutations (Ms, Mstr, Dr) (zyspec)
 - added: possibility to store templates also in database (luciorota)
 - added: html2txt function for non-HTML mail clients (luciorota)
 - added: breadcrumb class (luciorota)
 - added: updating to XOOPS 2.5.7 Multi-page help (luciorota)
 - fixed: when there is an apostrophe in the title, a backslash is obtained on reading the email (luciorota)
 - fixed: display of html encoded chars in ./index.php?op=list_letters in content (zyspec)
 - moved /css and /images to /assets (mamba)
 - renamed template extensions from .html to .tpl (mamba)
 - reversed "mod_" prefix on tables (mamba)
 - normalized prefixes for language constants to XNEWSLETTER (mamba)
 - replaced $i++ with ++$i (mamba)

Version 1.2
--------------
 - standardize code (luciorota)
 - added newsletter info field is html compatible (luciorota)
 - added new tag <{$title}> in letter templates (luciorota)
 - added new block for general info (feichtl/goffy)
 - removed xoops captcha when unsubscribe by link (feichtl/goffy)
 - transfered error text to language file (feichtl/goffy)